# nerva-sympy

./: README.md  requirements.txt  setup.cfg
scripts/: _equation_test_utils.py  check-equations-jax.py  check-equations-numpy.py  check-equations-sympy.py  check-equations-tensorflow.py  check-equations-torch.py  check-latex-equations.py  generate  generate_one_layer_tests.py  print-equations.py  print-loss-functions.py
src/nerva_sympy/: activation_functions.py  layers.py  loss_functions.py  matrix_operations.py  multilayer_perceptron.py  optimizers.py  softmax_functions.py
tests/: gpu_control.py  lala.py  loss1.py  mlp_constructors.py  run_all_tests.sh  test-equations-jax.py  test-equations-numpy.py  test-equations-sympy.py  test-equations-tensorflow.py  test-equations-torch.py  test_activation_functions.py  test_batch_normalization_definition.py  test_derivatives.py  test_frameworks.py  test_layer_batch_normalization.py  test_layer_derivations.py  test_layer_dropout.py  test_layer_linear.py  test_layer_softmax.py  test_layer_srelu.py  test_lemmas.py  test_loss_function_derivations.py  test_loss_functions.py  test_matrix_operations.py  test_matrix_properties.py  test_one_hot.py  test_one_layer.py  test_softmax_function_derivations.py  test_softmax_functions.py  utilities.py  validate_framework_plots.py
