[metadata]
name = nerva-sympy
version = 0.9.0
author = Wieger Wesselink
author_email = j.w.wesselink@tue.nl
description = Validation of neural network equations in SymPy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wiegerw/nerva-sympy
project_urls =
    Bug Tracker = https://github.com/wiegerw/nerva-sympy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)
    Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >= 3.10
install_requires =
    numpy >= 1.21
    sympy >= 1.9
    scikit-learn >= 1.1
    nerva-jax >= 0.4
    nerva-numpy >= 0.4
    nerva-tensorflow >= 0.4
    nerva-torch >= 0.4

[options.packages.find]
where = src
